--- a/src/nvhpatch.vcxproj
+++ b/src/nvhpatch.vcxproj
@@ -14,6 +14,7 @@
     <ProjectName>nvhpatch</ProjectName>
     <ProjectGuid>{DF2129CD-F3B3-498B-9547-FF584CB925E2}</ProjectGuid>
     <RootNamespace>nvhpatch</RootNamespace>
+    <LanguageStandard>stdcpp11</LanguageStandard>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
