--- a/src/ddraw.vcxproj
+++ b/src/ddraw.vcxproj
@@ -14,6 +14,7 @@
     <ProjectName>ddraw</ProjectName>
     <ProjectGuid>{DF2129CD-F3B3-498B-9547-FF584CB925E1}</ProjectGuid>
     <RootNamespace>ddraw</RootNamespace>
+    <LanguageStandard>stdcpp11</LanguageStandard>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
